--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # ----
 # Site
 
-title: Hydra Template
-url: "https://proud-alligator.cloudvent.net"
+title: MCX League Hosting
+url: "https://hosting.mcxleague.cf"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
@@ -10,15 +10,15 @@ disqus_shortname:
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
-description: Product marketing template for Jekyll.
+description: MCX League Hosting.
 author:
   name:
   email:
   twitter: # twitter username without the @ symbol
 social:
-  name: Hydra Template
+  name: MCX League Hosting
   links:
-    - https://github.com/CloudCannon/hydra-jekyll-template
+    - https://twitter.com/@MCX_League
 
 # -----
 # Build
