--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://hosting.mcxleague.cf"
 baseurl:
 google_analytics_key:
 google_maps_javascript_api_key:
-disqus_shortname:
+disqus_shortname: mcx-league-blog
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
